# altar-autonomous-driving

./: FAQ_TROUBLESHOOT.md  Important_Links  LICENSE  README.md  barbies-yolov3.cfg  map_segments2.txt
AADC/: .gitignore  AADCConfig.cmake
AADC/config/: start_LiveVisualization.sh
AADC/config/LiveVisualization/: LiveVisualization.adtfproject
AADC/config/LiveVisualization/adtfsessions/: camera_calibration.adtfuilayout  default_session.adtfsession  default_session.adtfuilayout  mySession.adtfsession  playback.adtfsession
AADC/config/LiveVisualization/adtfsessions/adtfgraphs/: aimilios_practise_graph.adtfconfiglayout  aimilios_practise_graph.adtfgraph  aimilios_practise_graph.adtfproperties  default_graph.adtfgraph  default_graph.adtfproperties
AADC/config/LiveVisualization/adtfsessions/adtfsystems/: lukas_system_arch.adtfsystem
AADC/config/UserConfiguration/adtfsessions/: default_session_linux.adtfsession  default_session_linux.adtfuilayout
AADC/config/UserConfiguration/adtfsessions/adtfsystems/: default_system_linux.adtfproperties
AADC/configuration_files/: camara_intr_calibration_fisheye_zach.yml  camara_intr_calibration_zach.yml  ipm_calibration.yml
AADC/description/: aadc.description
AADC/include/: aadc_jury.h  aadc_structs.h
AADC/src/aadcBase/position/: CMakeLists.txt
AADC/src/aadcDemo/: CMakeLists.txt
AADC/src/aadcDemo/algorithms/: CMakeLists.txt
AADC/src/aadcDemo/algorithms/FlipVerticalCam/: FlipVerticalCam.cpp
AADC/src/aadcDemo/jury/JuryApplication/: CMakeLists.txt
AADC/src/aadcUser/: CMakeLists.txt
AADC/src/aadcUser/AimiliosIPM/: AimiliosIPM.cpp  AimiliosIPM.h  CMakeLists.txt
AADC/src/aadcUser/AimiliosIPM/ipm/: IPM.cpp  IPM.h
AADC/src/aadcUser/AimiliosLane/: AimiliosLane.cpp  AimiliosLane.h  CMakeLists.txt
AADC/src/aadcUser/AltarCar/: CMakeLists.txt  Car.cpp  Car.h
AADC/src/aadcUser/AltarCrosswalk/: CMakeLists.txt  Crosswalk.cpp  Crosswalk.h
AADC/src/aadcUser/AltarDriverModule/: CMakeLists.txt  DriverModuleFilter.cpp  DriverModuleFilter.h  DriverModuleWidget.h  stdafx.h
AADC/src/aadcUser/AltarGraph/: CMakeLists.txt  GraphViz.cpp  GraphViz.h  cMapViz.h  stdafx.h
AADC/src/aadcUser/AltarGraph/mapUtils/: main.cpp  openDriveReader.cpp  openDriveReader.h
AADC/src/aadcUser/AltarIPMCalibration/: AltarIPMCalibration.cpp  AltarIPMCalibration.h  AltarIPMCalibrationWidget.cpp  AltarIPMCalibrationWidget.h  CMakeLists.txt  ipmCalibrationSettings.h  stdafx.h
AADC/src/aadcUser/AltarLaneFollower/: AltarLaneFollower.h  CMakeLists.txt  stdafx.h
AADC/src/aadcUser/AltarLocalize/: CMakeLists.txt  Localize.cpp  Localize.h  SignDetector.cpp  SignDetector.h  map_segments.txt  map_segments1.txt  map_segments2.txt  map_segments3.txt  stdafx.h
AADC/src/aadcUser/AltarMapping/: Mapping.cpp
AADC/src/aadcUser/AltarObjectDetection/: CMakeLists.txt
AADC/src/aadcUser/AltarObjectDetection/darknet/: .gitignore
AADC/src/aadcUser/AltarObjectDetection/darknet/arapaho/: AltarObjectDetection.cpp  AltarObjectDetection.h  AltarObjectDetection.h~HEAD  arapaho  arapaho.cpp  arapaho.hpp  barbies-yolov3.cfg  barbies.data  barbies.names  input.data  input_old.cfg  stdafx.h  test.cpp
AADC/src/aadcUser/AltarObjectDetection/darknet/include/: darknet.h
AADC/src/aadcUser/AltarParking/: CMakeLists.txt  Parking.cpp  Parking.h  stdafx.h
AADC/src/aadcUser/AltarPath/: CMakeLists.txt  Path.cpp  Path.h  map_segments.txt
AADC/src/aadcUser/AltarPullOut/: AltarPullOut.cpp  AltarPullOut.h  CMakeLists.txt
AADC/src/aadcUser/AltarRamping/: AltarRamping.cpp  AltarRamping.h  CMakeLists.txt
AADC/src/aadcUser/AltarReadData/: CMakeLists.txt  ReadData.cpp  ReadData.h
AADC/src/aadcUser/AltarSendData/: CMakeLists.txt  SendData.cpp  SendData.h
AADC/src/aadcUser/AltarStateMachine/: AltarStateMachine.cpp  AltarStateMachine.h  CMakeLists.txt  DecisionMaker.h  Queue_Struct.h  stdafx.h
AADC/src/aadcUser/AltarTrajectoryGen/: AltarTrajectoryGen.cpp  AltarTrajectoryGen.h  CMakeLists.txt  spline.h  stdafx.h
AADC/src/aadcUser/AltarUtils/: AltarStructs.h  CMakeLists.txt  MapStructs.h  audiParser.h  main.cpp  makefile  quadtree.h  test.cpp  testUtils.cpp  testUtils.h
AADC/src/aadcUser/AltarUtils/mapReader/: audiParser.cpp  openDriveReader.cpp  openDriveReader.h  parkingSpots.cpp  parkingSpots.h  signs_competition.xml  signs_kickoff.xml  test.xodr
AADC/src/aadcUser/AltarViz/: CMakeLists.txt  Viz.cpp  Viz.h  stdafx.h
AADC/src/aadcUser/AltarWorld/: CMakeLists.txt  World.cpp  World.h
AADC/src/aadcUser/AltarWorldViz/: CMakeLists.txt  WorldViz.cpp  WorldViz.h  circlelines.in
AADC/src/aadcUser/CannyEdge/: CMakeLists.txt  CannyEdge.cpp  CannyEdge.h
AADC/src/aadcUser/EmergencyBreak/: CMakeLists.txt  EmergencyBreak.cpp  EmergencyBreak.h  stdafx.h
AADC/src/aadcUser/HoughTransform/: CMakeLists.txt  HoughTransform.cpp  HoughTransform.h
AADC/src/aadcUser/LaneDetection/: CMakeLists.txt  LaneDetection.cpp  LaneDetection.h  spline.h  stdafx.h
AADC/src/aadcUser/TemplateFilter/: CMakeLists.txt
AADC/src/aadcUser/playground/: CMakeLists.txt
Documentation/Notes/: lane_detection_explained  object_detection.txt
Scripts/Utilities/: audiroom.in  map_creator.cpp  map_segments.txt  out  points.in
